--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
                 <p class = "menu-courses">Dessert</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <button class = "button-price">Prix : 12,90 €</button>
+            <button class = "button-price">Prix : 14,90 €</button>
         </div>
         <!-- menu2 -->
         <div class = "menu" id = "menu2">
@@ -77,7 +77,7 @@
                 <p class = "menu-courses">Dessert</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <button class = "button-price">Prix : 12,90 €</button>
+            <button class = "button-price">Prix : 14,90 €</button>
         </div>
         <!-- menu3 -->
         <div class = "menu" id = "menu3">
@@ -100,12 +100,12 @@
                 <p class = "menu-courses">Dessert</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <button class = "button-price">Prix : 12,90 €</button>
+            <button class = "button-price">Prix : 14,90 €</button>
         </div>
     </container>
 
-    <script src="script.js"></script>
-    <script src="script/menu.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/menu.js"></script>
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
